--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -115,7 +115,9 @@ jobs:
           aws-region: ${{ matrix.environments.region }}
 
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
+        uses: hashicorp/setup-terraform@v2
+        with:
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
       - name: Terraform Init
         id: init
